# zdown

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RULES.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
.superpowers/brainstorm/1540-1781926716/content/: approach.html
.superpowers/brainstorm/1540-1781926716/state/: server-stopped
.superpowers/brainstorm/1566-1781926867/content/: approach-b-detail.html  architecture.html  errors-caching.html  integration.html
.superpowers/brainstorm/1566-1781926867/state/: server-stopped
.superpowers/brainstorm/356-1781884088/content/: outline-approach.html  outline-design.html  outline-layout.html
.superpowers/brainstorm/356-1781884088/state/: server-stopped
.superpowers/brainstorm/662-1781893476/content/: search-bar-design.html  search-bar-placement.html  search-features.html  search-scope.html
.superpowers/brainstorm/662-1781893476/state/: server-stopped
.superpowers/brainstorm/813-1781897163/content/: theme-scope.html  theme-toggle-placement.html  waiting.html
.superpowers/brainstorm/813-1781897163/state/: server-stopped
crates/config/: Cargo.toml
crates/config/src/: keybinding.rs  lib.rs
crates/document_model/: Cargo.toml
crates/document_model/src/: ast.rs  error.rs  lib.rs  parse.rs  serialize.rs
crates/document_model/tests/: perf.rs  round_trip.rs
crates/document_model/tests/fixtures/: blockquote.md  code_block.md  commonmark_spec.md  heading.md  link_image.md  list.md  mixed.md  nested_list.md  paragraph.md  table.md
crates/editor_engine/: Cargo.toml
crates/editor_engine/src/: buffer.rs  command.rs  cursor.rs  editor.rs  error.rs  history.rs  lib.rs
crates/export_engine/: Cargo.toml
crates/export_engine/src/: decorator.rs  error.rs  font.rs  highlight.rs  html.rs  image_loader.rs  lib.rs  pdf.rs  renderer.rs  theme.rs
crates/html_renderer/: Cargo.toml
crates/html_renderer/src/: block.rs  css.rs  inline.rs  lib.rs  parser.rs
crates/i18n/: Cargo.toml
crates/i18n/locales/en-US/: actions.ftl  editor.ftl  file-tree.ftl  menu.ftl  settings.ftl
crates/i18n/locales/zh-CN/: actions.ftl  editor.ftl  file-tree.ftl  menu.ftl  settings.ftl
crates/i18n/src/: lib.rs  resource.rs
crates/markdown_renderer/: Cargo.toml
crates/markdown_renderer/src/: error.rs  image_cache.rs  lib.rs  render.rs  source.rs
crates/markdown_renderer/tests/: snapshot.rs
crates/mermaid_renderer/: Cargo.toml
crates/mermaid_renderer/src/: cache.rs  encode.rs  lib.rs
crates/spellcheck/: Cargo.toml
crates/spellcheck/src/: checker.rs  lib.rs
crates/terminal_panel/: Cargo.toml
crates/terminal_panel/src/: backend.rs  bindings.rs  font.rs  lib.rs  shell.rs  theme.rs  view.rs
crates/terminal_panel/tests/: integration_test.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: dialog.rs  error.rs  lib.rs  recent.rs  workspace.rs
crates/workspace/tests/: edit_save_reopen.rs  integration.rs
crates/zdown-app/: Cargo.toml
crates/zdown-app/src/: editor_state.rs  file_tree.rs  font_provider.rs  hybrid_view.rs  image_hosting.rs  input.rs  main.rs  menu.rs  outline_view.rs  preview_view.rs  search.rs  search_state.rs  settings_dialog.rs  source_view.rs  tab_bar.rs  view_mode.rs
crates/zdown-app/tests/: hybrid_perf.rs
docs/: ARCHITECTURE.md  CRATE_DEPS.md  ROADMAP.md  TASKS.md
docs/superpowers/plans/: 2026-06-18-document-model.md  2026-06-18-editor-engine.md  2026-06-18-markdown-renderer-source-and-zdown-app.md  2026-06-18-stage2-highlight-and-incremental-edit.md  2026-06-18-stage2-hybrid-and-cache.md  2026-06-18-stage2-markdown-renderer-ast.md  2026-06-18-stage2-view-mode-switch.md  2026-06-18-workspace.md  2026-06-19-html-export.md  2026-06-19-image-embedding.md  2026-06-19-pdf-enhancement.md  2026-06-19-stage3-pdf-export.md  2026-06-19-total-pages.md  2026-06-20-custom-font.md  2026-06-20-find-replace.md  2026-06-20-image-hosting.md  2026-06-20-mermaid-support.md  2026-06-20-outline.md  2026-06-20-theme-switching.md  2026-06-21-i18n-fluent-plan.md  2026-06-21-keybinding-plan.md  2026-06-21-spell-check-plan.md  2026-06-21-terminal-panel.md  2026-06-24-html-renderer-plan.md  2026-06-26-file-tree-plan.md
docs/superpowers/specs/: 2026-06-19-html-export-design.md  2026-06-19-image-embedding-design.md  2026-06-19-pdf-enhancement-design.md  2026-06-19-stage3-pdf-export-design.md  2026-06-19-total-pages-design.md  2026-06-20-custom-font-design.md  2026-06-20-find-replace-design.md  2026-06-20-image-hosting-design.md  2026-06-20-mermaid-support-design.md  2026-06-20-outline-design.md  2026-06-20-theme-switching-design.md  2026-06-21-i18n-fluent-design.md  2026-06-21-keybinding-design.md  2026-06-21-spell-check-design.md  2026-06-21-terminal-panel-design.md  2026-06-24-html-renderer-design.md  2026-06-26-file-tree-design.md
