[package]
name = "export_engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
embed-fonts = []

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
chrono.workspace = true
genpdf = { workspace = true, features = ["images"] }
font-kit.workspace = true
document_model.workspace = true
syntect = { workspace = true, features = ["default-syntaxes", "default-themes"] }
image.workspace = true
ureq.workspace = true
base64.workspace = true
