[package]
name = "i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fluent.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true
intl-memoizer.workspace = true
serde.workspace = true
