[package]
name = "markdown_renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
syntect = { workspace = true, features = ["default-syntaxes", "default-themes"] }
egui.workspace = true
document_model.workspace = true
html_renderer.workspace = true
mermaid_renderer.workspace = true
resvg.workspace = true
tiny-skia.workspace = true
image.workspace = true
ureq.workspace = true
base64.workspace = true
tracing.workspace = true
