[package]
name = "mermaid_renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
flate2 = "1"
base64.workspace = true
ureq.workspace = true
sha2 = "0.10"
lru = "0.14"
