[package]
name = "terminal_panel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
egui.workspace = true
alacritty_terminal.workspace = true
portable-pty.workspace = true
tracing.workspace = true
anyhow = "1"
