[package]
name = "workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
document_model.workspace = true
rfd.workspace = true
dirs.workspace = true
toml.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3"
editor_engine.workspace = true
