[package]
name = "zdown-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
editor_engine.workspace = true
workspace.workspace = true
document_model.workspace = true
markdown_renderer.workspace = true
export_engine.workspace = true
config.workspace = true

[dev-dependencies]
tempfile = "3"
