[package]
name = "zdown-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
editor_engine.workspace = true
workspace.workspace = true
document_model.workspace = true
markdown_renderer.workspace = true
export_engine.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }
base64 = "0.22"
arboard = "3"
image = "0.23"
open = "5"
config = { workspace = true }

[dev-dependencies]
tempfile = "3"
