[package]
name = "zdown-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eframe.workspace = true
egui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
editor_engine.workspace = true
workspace.workspace = true
document_model.workspace = true
markdown_renderer.workspace = true
export_engine.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }
base64 = "0.22"
arboard = "3"
image = "0.23"
open = "5"
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
config = { workspace = true }
serde_json = "1"
spellcheck = { path = "../spellcheck" }
i18n = { path = "../i18n" }
fluent-bundle.workspace = true
terminal_panel = { path = "../terminal_panel" }
font-kit.workspace = true

[dev-dependencies]
tempfile = "3"
